--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,4 +1,18 @@
-:root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+#app {
+	width: 100vw;
+	min-height: 100vh;
+	overflow-x: hidden;
+}
+
+#content {
+	padding-top: 56px;
+}
+
+/* :root {
 	font-family: 'Helvetica Neue', arial, sans-serif;
 	font-weight: 400;
 	-webkit-font-smoothing: antialiased;
@@ -22,7 +36,7 @@ body {
 	min-height: 100vh;
 }
 
-#app > main {
+#app>main {
 	display: flex;
 	padding-top: 3.5rem;
 	margin: 0 auto;
@@ -33,7 +47,7 @@ body {
 }
 
 @media (max-width: 639px) {
-	#app > main {
+	#app>main {
 		margin: 0 2rem;
 	}
-}
+} */
